# mnist_mlp

./: CMakeLists.txt  LICENSE  MNIST_train_model.xml  README.md
include/: MnistMLP.h  ReadMnistData.h
src/: ReadMnistData.cpp  main.cpp  test_model.cpp
unittests/: CMakeLists.txt  main.cpp
